<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bdmg.bdmg.FinancingActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/bg_solar"
                android:layout_weight="1.07" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="@string/financiamento1"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="@string/financiamento2"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="@string/financiamento3"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="@string/financiamento4"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="@string/financiamento5"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:text="@string/financiamento6"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />



        </LinearLayout>

    </ScrollView>


</LinearLayout>
