<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.appvie.appvie.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="#48BC97"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/appvie_branco_1"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:paddingLeft="10dp"
                    android:id="@+id/email"
                    android:layout_width="310dp"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/CinzaEscuro"
                    android:textColorHint="@color/white"
                    android:background="@color/whiteaAlpha"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingLeft="10dp"
                    android:id="@+id/password"
                    android:layout_width="310dp"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/CinzaEscuro"
                    android:textColorHint="@color/white"
                    android:background="@color/whiteaAlpha"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="400dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="310dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="Login"
                android:background="#48BC97"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="12dp"
                    android:background="@null"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="#48BC97" />

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:textSize="12dp"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="#48BC97" />

            </LinearLayout>
        </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>
